--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ flake8==5.0.4
 mccabe==0.7.0
 mypy-extensions==0.4.3
 pathspec==0.9.0
+Pillow==9.2.0
 platformdirs==2.5.2
 pycodestyle==2.9.1
 pyflakes==2.5.0
